# cloco-internship-project-1

backend/: db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/posts/: models.py  serializer.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_alter_comment_created_at_alter_post_created_at.py  0003_alter_comment_created_at_alter_post_created_at.py  0004_alter_comment_created_at_alter_post_created_at_and_more.py  0005_alter_comment_created_at_alter_post_created_at_and_more.py  0006_alter_comment_created_at_alter_post_created_at.py  0007_alter_comment_created_at_alter_post_created_at.py  0008_alter_comment_created_at_alter_post_created_at.py
backend/tokens/: models.py  views.py
backend/tokens/migrations/: 0001_initial.py  0002_alter_token_expiry_alter_token_t_type.py
backend/users/: models.py  serializer.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_table.py  0003_customuser_address_customuser_contact.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: Alert.vue
frontend/src/components/Navbar/: NavBar.vue  UserNavBar.vue
frontend/src/components/posts/: Card.vue  Comment.vue  CreatePost.vue  FullViewPost.vue
frontend/src/components/toasts/: Toast.vue  Toasts.vue
frontend/src/components/user/: EditProfile.vue  (+4 more)
frontend/src/pages/: CreatePost.vue  Dashboard.vue  LandingPage.vue  Profile.vue  ProfilePage.vue  SignIn.vue  SignUp.vue
frontend/src/plugins/: mixin.js
frontend/src/store/: store.js
