[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["seejn <seejnmaharjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pyjwt = "^2.8.0"
django-cors-headers = "^4.3.1"
django-samesite-none = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
